--- a/Rmd/testrmd.Rmd
+++ b/Rmd/testrmd.Rmd
@@ -1,3 +1,11 @@
+---
+layout: post
+title: "Test with knitr"
+description: "Getting it to work"
+category: 
+tags: [test]
+---
+{% include JB/setup %}
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring web pages (click the **MD** toolbar button for help on Markdown).
 
