Make plots visible.

--- a/_posts/2012-10-07-testrmd.md
+++ b/_posts/2012-10-07-testrmd.md
@@ -36,6 +36,6 @@ You can also embed plots, for example:
 plot(cars)
 {% endhighlight %}
 
-![center](/../figs/testrmd/unnamed-chunk-2.png) 
+![center](/../figs/testrmd/unnamed-chunk-2.bmp) 
 
 
