--- a/Rmd/testrmd.Rmd
+++ b/Rmd/testrmd.Rmd
@@ -17,7 +17,7 @@ summary(cars)
 
 You can also embed plots, for example:
 
-```{r fig.width=7, fig.height=6}
+```{r fig.width=7, fig.height=6, dev='bmp', dev.args=list(bg="white")}
 plot(cars)
 ```
 
