--- a/Rmd/2012-10-07-printR.Rmd
+++ b/Rmd/2012-10-07-printR.Rmd
@@ -2,7 +2,7 @@
 layout: post
 title: "printR"
 description: "A pointless exercise in code obfuscation"
-category: blarg
+category: other
 tags: [R, obfuscation]
 ---
 {% include JB/setup %}
