Updated tags and categories

--- a/_posts/2012-10-07-printR.md
+++ b/_posts/2012-10-07-printR.md
@@ -2,8 +2,8 @@
 layout: post
 title: "printR"
 description: "A pointless exercise in code obfuscation"
-category: other
-tags: [R, obfuscation]
+category: R
+tags: [R, obfuscation, statsblogs]
 ---
 {% include JB/setup %}
 
